--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -15,9 +15,21 @@
     <!-- Styles personnalisés -->
     <link rel="stylesheet" href="{% static 'gestion/css/custom.css' %}">
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Votre CSS personnalisé -->
+    <link rel="stylesheet" href="{% static 'gestion/css/styles.css' %}">
+
+    <!-- HTMX -->
+    <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
+</head>
+<body>
+    <header>
+
+
     <!-- Favicon -->
     <link rel="icon" href="{% static 'gestion/img/favicon.ico' %}" type="image/x-icon">
-    
+    <!-- HTMX -->
+    <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 </head>
 
 
